<resources>
    <string name="app_name">QuizTestHome</string>
    <string name="home">Home</string>
    <string name="ranking">Ranking</string>
    <string name="profile">Profile</string>
    <string name="skip">Skip</string>
    <string name="or">OR</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="register">Register</string>
    <string name="do_not_have_an_account">Do not have an account?</string>
    <string name="login">Login</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="malformed_account">Malformed account</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_password_agian">Enter your password again</string>
    <string name="hello_my_friend">Hello my friend</string>
    <string name="welcome_to_the_tests_of_quiz_test">Welcome to the tests of Quiz test</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_guest_mode">You need to login to make money</string>
    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>
    <string name="all_quiz">All quiz</string>
    <string name="View_all">View all</string>
    <string name="recommend_for_you">Recommend for you</string>
    <string name="search_recent">Search recent</string>
    <string name="show_all_history">Show all history</string>
    <string name="do_you_already_have_an_account">Did you remember the password?</string>
    <string name="when_you_click_register_you_agree_to">When you click register, you agree to </string>
    <string name="our_terms_and_conditions_of_use">Our Terms and Conditions of Use </string>

    <string name="create_account">Create account</string>
    <string name="create_an_account_and_take_the_quiz">Create an account and take the quiz</string>
    <string name="you_are_using_guest_mode">You are using guest mode</string>
    <string name="upgrade_to_the_pro_version">Upgrade to the pro version</string>
    <string name="analyzing_data">Analyzing data...</string>
    <string name="ok">OK</string>
    <string name="close">close</string>
    <string name="history_result">History Result</string>
    <string name="view_all">View all</string>
    <string name="language">Language</string>
    <string name="info">Info</string>
    <string name="faq">FAQ</string>
    <string name="name">Name</string>
    <string name="change">Change</string>
    <string name="password">Password</string>
    <string name="gmail">Gmail</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="feedback">Feedback</string>
    <string name="share">Share</string>
    <string name="save">Save</string>
    <string name="spoken_language">Spoken Language</string>
    <string name="english">English</string>
    <string name="account_linked">Account linked</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="link">Link</string>
    <string name="setting">Setting</string>
    <string name="change_image">Change image</string>
    <string name="camera">Camera</string>
    <string name="select_picture">Select picture</string>

    <string name="your_star">Your Star</string>
    <string name="star">star</string>
    <string name="your_money">Your Money</string>
    <string name="money">$</string>
    <string name="history_star">History Star</string>
    <string name="payment_history">Payment History</string>
    <string name="get_money">Get Money</string>
    <string name="no_search_results_found">No search results found</string>
    <string name="search_quiz">Search quiz test</string>
    <string name="search">Search</string>
    <string name="stars">%d Stars</string>
    <string name="not_update">Not update</string>
    <string name="weekly_ranking">Weekly ranking</string>
    <string name="overall_rating">Overall rating</string>
    <string name="please_login_to_use_this_feature">Please login to use this feature</string>
    <string name="score"><b>%d</b> điểm</string>

    <string name="change_password">Change password</string>
    <string name="forget_password">Forget password?</string>
    <string name="reset">Reset</string>
    <string name="password_does_not_match">Re-entered password does not match</string>
    <string name="current_password">Current password</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="enter_your_new_password_again">Enter your new password again</string>
    <string name="error">Error</string>

    <string name="email_invalidate">Email invalidate</string>
    <string name="email_already_in_use">Email already in use</string>
    <string name="re_entered_password_does_not_match">Re-entered password does not match</string>
    <string name="Your_name_cannot_exceed_32_characters">Your name cannot exceed 32 characters</string>
    <string name="enter_your_password_again">Enter your password again</string>
    <string name="re_password">Re-Password</string>
    <string name="email">Email</string>
    <string name="password_cannot_less_6_characters">Password cannot less 6 characters</string>
    <string name="continuee">Continue</string>
    <string name="verify_account">Verify account</string>
    <string name="we_sent_a_6_digit_otp_to_email">We sent a 6 digit OTP to email</string>
    <string name="you_did_not_receive_the_code">You did not receive the code?</string>
    <string name="send_again">Send again</string>
    <string name="_80">80s</string>
    <string name="create_password">Create password</string>

    <string name="get_more">Get more</string>
    <string name="open">Open</string>
    <string name="earning_tasks">Earning Tasks</string>
    <string name="get_more_stars">Get more stars</string>
    <string name="get_more_star_chances">Get more star chances</string>
    <string name="get_more_money_chances">Get more money chances</string>
    <string name="withdraw_money">Withdraw Money</string>
    <string name="payment_method">Payment method</string>
    <string name="your_account_address">Your account address</string>
    <string name="withdrawal_amount">Withdrawal amount</string>
    <string name="all">All</string>
    <string name="withdraw_now">Withdraw Now</string>
    <string name="input_your_account">Input your account</string>
    <string name="please_enter_withdrawal_amount">Please enter withdrawal amount</string>
    <string name="notification">Notification</string>
    <string name="no_announcements">No announcements</string>
    <string name="get_s_star">Get %d star</string>
    <string name="money_get">Get %d$</string>
    <string name="star_pay">Cost %d</string>
    <string name="value_">%d</string>
    <string name="facebook_app_id">1162382864541809</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">2602e25e3b8500fd165fdf5356aa167a</string>
    <string name="default_web_client_id">288710554517-r0nq21nmc0toaciq1g8j42i02o7vu0oo.apps.googleusercontent.com</string>
    <string name="hint_email">Enter your email</string>
    <string name="hint_pass">Enter your password</string>
    <string name="error_400">Bad request</string>
    <string name="error_401">Authorization failed</string>
    <string name="error_404">Not found url</string>
    <string name="error_500">Internal Server Error</string>
    <string name="error_502">Bad gateway</string>
    <string name="title_forget_pass">Forget Password</string>
    <string name="text_done">Done</string>
    <string name="text_notice">Notice</string>
    <string name="text_error_re_enter_pass">Re-entered password does not match</string>
    <string name="d_questions">%d questions</string>
    <string name="result_d">Result (%d)</string>
    <string name="top_d">Top %d</string>
    <string name="error_message_default">An error occurred, please try again later</string>
    <string name="minimum_money">Minimum money</string>
    <string name="empty_data">No data</string>
    <string name="tv_more">More</string>
    <string name="title_term_condition">Term Condition</string>
    <string name="tv_history">History</string>
    <string name="enter_amount">Enter amount</string>

</resources>