<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imv_thum"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_240sdp"
            android:scaleType="fitXY"
            android:src="@drawable/bg_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="@dimen/_29sdp"
            android:layout_height="@dimen/_29sdp"
            android:layout_marginTop="@dimen/_32sdp"
            android:layout_marginEnd="@dimen/_13sdp"
            android:src="@drawable/ic_frame"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/login_background"
            android:layout_marginTop="@dimen/margin_top_layout_content_login"
            android:paddingBottom="@dimen/_122sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imv_thum">

            <com.quiztest.quiztest.ui.ExtTextView
                android:id="@+id/txt_hellomyfriend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24sdp"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:text="@string/hello_my_friend"
                android:textColor="@color/color_22313F"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <com.quiztest.quiztest.ui.ExtTextView
                android:id="@+id/txt_welcometo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:text="@string/welcome_to_the_tests_of_quiz_test"
                android:textColor="@color/color_22313F"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintTop_toBottomOf="@+id/txt_hellomyfriend" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_mail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_48sdp"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_24sdp"
                android:background="@drawable/edittext_background"
                android:hint="@string/enter_your_email"
                android:padding="@dimen/_16sdp"
                android:textSize="@dimen/_16sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_welcometo" />

            <com.quiztest.quiztest.ui.ExtTextView
                android:id="@+id/txt_malfomed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:gravity="center"
                android:text="@string/malformed_account"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@+id/edt_mail" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_pass"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_48sdp"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_background"
                android:drawableEnd="@drawable/ic_open_eye"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:padding="@dimen/_16sdp"
                android:textSize="@dimen/_16sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.512"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_malfomed" />

            <com.quiztest.quiztest.ui.ExtTextView
                android:id="@+id/txt_incorectpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:gravity="center"
                android:text="@string/incorrect_password"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@+id/edt_pass" />

            <com.quiztest.quiztest.ui.ExtTextView
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_48sdp"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_24sdp"
                android:background="@drawable/btn_background"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_incorectpass" />

            <com.quiztest.quiztest.ui.ExtTextView
                android:id="@+id/txt_do_not_have"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24sdp"
                android:layout_marginEnd="@dimen/_2sdp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/do_not_have_an_account"
                android:textColor="@color/color_8D959D"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintEnd_toStartOf="@id/txt_register"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_login"
                app:layout_constraintHorizontal_chainStyle="packed"/>

            <com.quiztest.quiztest.ui.ExtTextView
                android:id="@+id/txt_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_2sdp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/register"
                android:textColor="@color/color_22313F"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintBottom_toBottomOf="@id/txt_do_not_have"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/txt_do_not_have"
                app:layout_constraintTop_toTopOf="@id/txt_do_not_have" />


            <com.quiztest.quiztest.ui.ExtTextView
                android:id="@+id/txt_fogot_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center_horizontal"
                android:text="@string/forgot_password"
                android:textColor="@color/color_22313F"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_do_not_have" />


            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginStart="@dimen/_23sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:background="@color/color_E3E5E7"
                app:layout_constraintBottom_toBottomOf="@id/txt_center"
                app:layout_constraintEnd_toStartOf="@id/txt_center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/txt_center" />

            <com.quiztest.quiztest.ui.ExtTextView
                android:id="@+id/txt_center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/or"
                android:textColor="@color/color_8D959D"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_fogot_pass" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_23sdp"
                android:background="@color/color_E3E5E7"
                app:layout_constraintBottom_toBottomOf="@id/txt_center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/txt_center"
                app:layout_constraintTop_toTopOf="@id/txt_center" />


            <ImageView
                android:id="@+id/imv_logo_google"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                app:layout_constraintHorizontal_chainStyle="packed"
                android:layout_marginEnd="@dimen/_8sdp"
                android:src="@drawable/ic_google"
                app:layout_constraintEnd_toStartOf="@+id/imv_logo_facebook"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_center" />

            <ImageView
                android:id="@+id/imv_logo_facebook"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:src="@drawable/ic_facebook"
                android:layout_marginStart="@dimen/_8sdp"
                app:layout_constraintBottom_toBottomOf="@id/imv_logo_google"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imv_logo_google"
                app:layout_constraintTop_toTopOf="@id/imv_logo_google" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>